Implement handle function to view details of note

--- a/index.html
+++ b/index.html
@@ -71,87 +71,20 @@
 							<!-- Top Part 'PINNED'-->
 							<div class="sidebar__top">
 								<h2 class="sidebar__title pinned">PINNED</h2>
-								<div class="notes-wrapper" data-key="PINNED">
-									<!-- Notes -->
-									<article class="note">
-										<h3 class="note-title">Lorem, ipsum dolor.</h3>
-										<p class="note-content">
-											Lorem ipsum dolor s cupiditate quia facere!
-										</p>
-										<div class="note-footer">
-											<p class="publish-date">March 7, 2019</p>
-											<button class="delete-button">Delete</button>
-										</div>
-									</article>
-								</div>
+								<div class="notes-wrapper"></div>
 							</div>
 
 							<!-- Bottom Part 'Notes'-->
 							<div class="sidebar__bottom">
 								<h2 class="sidebar__title notes">Notes</h2>
-								<div class="notes-wrapper">
-									<!-- Notes -->
-									<article class="note active-note">
-										<h3 class="note-title">Lorem, ipsum dolor.</h3>
-										<p class="note-content">porta lorem lacinia consectetur.</p>
-										<div class="note-footer">
-											<p class="publish-date">March 7, 2019</p>
-											<button class="delete-button">Delete</button>
-										</div>
-									</article>
-									<article class="note pinned-note">
-										<h3 class="note-title">Lorem, ipsum dolor.</h3>
-										<p class="note-content">
-											Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-											Velit tenetur, quis facilis nihil deleniti repellat ad
-											perspiciatis dolorem dolor commodi.
-										</p>
-										<div class="note-footer">
-											<p class="publish-date">March 7, 2019</p>
-											<button class="delete-button">Delete</button>
-										</div>
-									</article>
-									<article class="note">
-										<h3 class="note-title">Lorem, ipsum dolor.</h3>
-										<p class="note-content">
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-											porta lorem lacinia consectetur.
-										</p>
-										<div class="note-footer">
-											<p class="publish-date">March 7, 2019</p>
-											<button class="delete-button">Delete</button>
-										</div>
-									</article>
-								</div>
+								<div class="notes-wrapper"></div>
 							</div>
 						</div>
 
 						<div class="content">
 							<div class="content-wrap">
 								<!-- Note -->
-								<div class="content__note-wrap">
-									<article class="note">
-										<h2 class="note-title">Lorem, ipsum dolor.</h2>
-										<p class="note-date">
-											March 7, 2019
-											<span class="note-auther">/ By Yousef</span>
-										</p>
-										<p class="note-content">
-											Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-											Provident beatae odit libero placeat consequatur maxime
-											quam perspiciatis aperiam. Obcaecati ipsum doloremque
-											aliquid autem Eius consequatur ad numquam deleniti natus
-											optio atque. molestiae magnam eum temporibus doloremque
-											autem praesentium aliquam alias perspiciatis eligendi
-											incidunt error similique quas nostrum vitae ea? Maxime
-											asperiores qui inventore cupiditate ex sint voluptates,
-											corporis, autem dolorum sapiente assumenda eligendi dolore
-											quibusdam dignissimos, tempore enim doloribus nisi.
-											Ratione quasi facere hic eligendi ab quisquam, accusamus
-											ullam?
-										</p>
-									</article>
-								</div>
+								<div class="content__note-wrap"></div>
 								<!-- Add icon -->
 								<button class="add-icon"></button>
 							</div>
@@ -188,7 +121,6 @@
 									<textarea name="note" id="note" class="form-note"></textarea>
 								</div>
 								<div>
-									<!-- Data-key attribute to specify whether the note should be pinned or not -->
 									<button class="add-note-button" data-key="false">
 										Add Note
 									</button>
