Implement drag and drop functionality to allow reordering of notes

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<!-- Top Part 'PINNED'-->
 							<div class="sidebar__top">
 								<h2 class="sidebar__title pinned">PINNED</h2>
-								<div class="notes-wrapper"></div>
+								<div class="notes-wrapper is-pinned-container"></div>
 							</div>
 
 							<!-- Bottom Part 'Notes'-->
