Complete responsive design for medium-sized screens and start in mobile

--- a/index.html
+++ b/index.html
@@ -22,7 +22,22 @@
 			<aside class="aside">
 				<!-- Header -->
 				<header class="header">
-					<h2 class="logo">Almdrasa-Notes</h2>
+					<div class="header-top">
+						<img src="images/menu-icon.svg" alt="menu icon" class="menu-icon" />
+						<h2 class="logo" id="logo">Almdrasa-Notes</h2>
+						<div>
+							<img
+								src="images/search-icon-button.svg"
+								alt="search icon"
+								class="search-icon-button"
+							/>
+							<img
+								src="images/x-icon.svg"
+								alt="close icon"
+								class="close-icon"
+							/>
+						</div>
+					</div>
 					<!-- Search -->
 					<form class="search-form">
 						<button type="submit" class="search-button">
