Complete mobile responsiveness, fix CSS issues, and enable interactive search

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
 						/>
 					</form>
 				</header>
+
+				<div class="close-sidebar-icon">
+					<img src="images/x-icon.svg" alt="close icon" class="close-icon" />
+				</div>
 				<!-- Links -->
 				<div class="aside__links">
 					<button class="aside__link" id="notes-page-button">
