--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en-US">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="QuickNote - Simple Note Taking App" />
-
+		
+		<link
+			rel="icon"
+			type="image/x-icon"
+			sizes="30x30"
+			href="images/favicon.ico"
+		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
